fix: ensure breadcrumb paths are vertically aligned

--- a/mkdocs_doubleslash_theme/assets/stylesheets/mkdocs-doubleslash-theme.css
+++ b/mkdocs_doubleslash_theme/assets/stylesheets/mkdocs-doubleslash-theme.css
@@ -195,4 +195,8 @@
     td:last-child {
         border-right: none;
     }
+
+    .md-path__item:not(:first-child) {
+        align-items: center;
+    }
 }
